--- a/css/styles.css
+++ b/css/styles.css
@@ -136,6 +136,9 @@ body {
   background-repeat: no-repeat;
   padding: 188px 0;
   text-align: center;
+  max-width: 1440px;
+  background-position: center;
+  background-size: cover;
 }
 
 .hero-head {
@@ -158,6 +161,7 @@ body {
   cursor: pointer;
   padding: 16px 32px;
   text-align: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .order-btn {
@@ -198,6 +202,9 @@ body {
 }
 
 .container-new-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 24px 100px;
   background-color: #f4f4fd;
   border-radius: 4px;
@@ -294,6 +301,9 @@ img {
 .team-item {
   background-color: #ffffff;
   border-radius: 0 0 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  padding: 32px 0;
 }
 
 .thumb-team {
@@ -312,20 +322,29 @@ img {
   display: flex;
   flex-wrap: wrap;
   gap: 24px;
+  justify-content: center;
 }
 
 .team-icon-item {
-  background-color: #404bbf;
   margin-top: 8px;
-  justify-content: center;
   align-items: center;
-  border-radius: 50%;
   width: 40px;
   height: 40px;
+  position: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-icon-item:is(:hover, :focus) {
-  background-color: #31d0aa;
+.team-icon-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+}
+
+.team-icon-link:is(:hover, :focus) {
+  background-color: #404bbf;
 }
 
 .team-icon {
