--- a/css/styles.css
+++ b/css/styles.css
@@ -303,13 +303,12 @@ img {
   border-radius: 0 0 4px 4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  padding: 32px 0;
 }
 
 .thumb-team {
   display: flex;
   flex-direction: column;
-  padding: 32px 16px;
+  padding: 32px 0;
   align-items: center;
   text-align: center;
 }
@@ -343,12 +342,17 @@ img {
   justify-content: center;
 }
 
-.team-icon-link:is(:hover, :focus) {
+.team-icon-link:hover {
+  background-color: #404bbf;
+}
+
+.team-icon-link:focus {
   background-color: #404bbf;
 }
 
 .team-icon {
   margin: 12px 12px;
+  fill: #f4f4fd;
 }
 
 /*---------------Customers--------------*/
