--- a/css/styles.css
+++ b/css/styles.css
@@ -329,7 +329,7 @@ img {
   align-items: center;
   width: 40px;
   height: 40px;
-  position: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-icon-link {
@@ -377,20 +377,34 @@ img {
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
+  gap: 24px;
 }
 
 .customers-item {
-  display: flex;
-  padding: 16px 32px;
-  border: 1px solid #8e8f99;
-  border-radius: 4px;
-  gap: 24px;
+  /* padding: 16px 32px;
   width: calc((100% - 5 * 24px) / 6);
-  height: 88px;
+  height: 88px; */
 }
 
-.customers-item:is(:hover, :focus) .customers-icon {
-  fill: #404bbf;
+.customers-icon-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
+  color: #8e8f99;
+}
+
+.customers-icon-link:hover {
+  border-color: #404bbf;
+  color: #404bbf;
+}
+
+.customers-icon-link:focus {
+  border-color: #404bbf;
+  color: #404bbf;
 }
 .customers-icon {
   max-width: 104px;
