--- a/css/styles.css
+++ b/css/styles.css
@@ -381,9 +381,8 @@ img {
 }
 
 .customers-item {
-  /* padding: 16px 32px;
   width: calc((100% - 5 * 24px) / 6);
-  height: 88px; */
+  height: 88px;
 }
 
 .customers-icon-link {
