--- a/css/styles.css
+++ b/css/styles.css
@@ -383,6 +383,8 @@ img {
 .customers-item {
   width: calc((100% - 5 * 24px) / 6);
   height: 88px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-icon-link {
@@ -399,14 +401,17 @@ img {
 .customers-icon-link:hover {
   border-color: #404bbf;
   color: #404bbf;
+  fill: #404bbf;
 }
 
 .customers-icon-link:focus {
   border-color: #404bbf;
   color: #404bbf;
+  fill: #404bbf;
 }
 .customers-icon {
   max-width: 104px;
+  fill: currentColor;
 }
 
 /* ---------------------APP------------------------- */
@@ -427,14 +432,19 @@ img {
   border-radius: 4px;
   border: 1px solid #e7e9fc;
   padding: 12px 24px;
+  box-shadow: ;
 }
 
 .portfolio-btn :hover {
   border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-btn :focus {
   border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .btn:hover {
@@ -466,6 +476,19 @@ img {
   /* margin-bottom: 72px; */
   column-gap: 24px;
   row-gap: 48px;
+}
+.img-item {
+}
+
+.img-link {
+  display: block;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.img-link:hover {
+  transform: translate(0%);
 }
 
 .thumb-text {
