--- a/css/styles.css
+++ b/css/styles.css
@@ -426,6 +426,13 @@ img {
   margin-bottom: 72px;
 }
 
+.button-item {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .portfolio-btn {
   background-color: #f4f4fd;
   color: #4d5ae5;
@@ -437,12 +444,18 @@ img {
 
 .portfolio-btn :hover {
   border: 1px solid transparent;
+}
+
+.button-item:hover {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-btn :focus {
   border: 1px solid transparent;
+}
+
+.buttom-item:focus {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
@@ -477,18 +490,15 @@ img {
   column-gap: 24px;
   row-gap: 48px;
 }
-.img-item {
-}
 
 .img-link {
   display: block;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .img-link:hover {
-  transform: translate(0%);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .thumb-text {
