--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,8 @@ body {
 
 .header {
   border-bottom: 1px solid #e7e9fc;
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header .container {
@@ -427,13 +428,11 @@ img {
   gap: 24px;
   justify-content: center;
   margin-bottom: 72px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-}
-
 
 .portfolio-btn {
   background-color: #f4f4fd;
@@ -441,7 +440,6 @@ img {
   border-radius: 4px;
   border: 1px solid #e7e9fc;
   padding: 12px 24px;
-  box-shadow: ;
 }
 
 .portfolio-btn :hover {
