--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,10 @@ body {
   gap: 40px;
 }
 
+.menu-item {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .menu-link {
   color: var(--head-color);
   font-size: 16px;
@@ -96,6 +100,16 @@ body {
   display: block;
   position: relative;
   color: #404bbf;
+}
+
+.menu-link ::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
 }
 
 .menu-link:hover {
@@ -121,6 +135,9 @@ body {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+.address-item {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link:hover,
@@ -359,7 +376,7 @@ img {
   fill: #f4f4fd;
 }
 
-/*---------------Customers--------------*/
+/*---------------CUSTOMERS--------------*/
 
 .customers {
   background-color: #ffffff;
