--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,12 @@ body {
 
 .menu-item {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
 }
 
 .menu-link {
@@ -102,7 +108,7 @@ body {
   color: #404bbf;
 }
 
-.menu-link ::after {
+/* .menu-item ::after {
   content: "";
   position: absolute;
   left: 0;
@@ -110,7 +116,7 @@ body {
   height: 4px;
   background-color: #404bbf;
   border-radius: 2px;
-}
+} */
 
 .menu-link:hover {
   color: #404bbf;
