--- a/css/styles.css
+++ b/css/styles.css
@@ -84,10 +84,6 @@ body {
 .menu-list {
   display: flex;
   gap: 40px;
-}
-
-.menu-item {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: absolute;
   left: 0;
   bottom: -1px;
@@ -95,6 +91,15 @@ body {
   background-color: #404bbf;
   border-radius: 2px;
 }
+
+/* .menu-item {
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
+} */
 
 .menu-link {
   color: var(--head-color);
@@ -106,6 +111,7 @@ body {
   display: block;
   position: relative;
   color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* .menu-item ::after {
@@ -141,8 +147,6 @@ body {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
-}
-.address-item {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
