--- a/css/styles.css
+++ b/css/styles.css
@@ -144,8 +144,7 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.address-link:hover,
-.address-link:focus {
+.address-link:is(:hover, :focus) {
   color: #404bbf;
 }
 
@@ -594,15 +593,21 @@ img {
 }
 
 .footer-icon-item {
-  background-color: #404bbf;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
   width: 40px;
   height: 40px;
 }
 
-.footer-icon-item:is(:hover, :focus) {
+.footer-icon-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-icon-link:is(:hover, :focus) {
   background-color: #31d0aa;
 }
 
