--- a/css/styles.css
+++ b/css/styles.css
@@ -595,6 +595,7 @@ img {
 .footer-icon-item {
   width: 40px;
   height: 40px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icon-link {
@@ -607,10 +608,16 @@ img {
   align-items: center;
 }
 
-.footer-icon-link:is(:hover, :focus) {
-  background-color: #31d0aa;
+.footer-icon {
+  fill: #f4f4fd;
 }
 
+.footer-icon-link:hover {
+  background-color: #31d0aa;
+}
+.footer-icon-link:focus {
+  background-color: #31d0aa;
+}
 .footer-icon {
   margin: 8px 8px;
 }
