--- a/css/styles.css
+++ b/css/styles.css
@@ -188,6 +188,17 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.btn:hover {
+  background-color: #404bbf;
+  color: #ffffff;
+  border: 1px solid transparent;
+}
+.btn:focus {
+  background-color: #404bbf;
+  color: #ffffff;
+  border: 1px solid transparent;
+}
+
 .order-btn {
   color: #ffffff;
   background-color: #4d5ae5;
@@ -443,6 +454,16 @@ img {
   padding: 96px 0 120px 0;
 }
 
+.app-head {
+  color: var(--head-color);
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  visibility: hidden;
+}
+
 .button-list {
   display: flex;
   gap: 24px;
@@ -460,48 +481,34 @@ img {
   border-radius: 4px;
   border: 1px solid #e7e9fc;
   padding: 12px 24px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-btn :hover {
   border: 1px solid transparent;
-}
-
-.button-item:hover {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-btn :focus {
   border: 1px solid transparent;
-}
-
-.buttom-item:focus {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.btn:hover {
-  background-color: #404bbf;
-  color: #ffffff;
-  border: 1px solid transparent;
-}
-.btn:focus {
-  background-color: #404bbf;
-  color: #ffffff;
-  border: 1px solid transparent;
-}
+/* .buttom-item:focus {
 
-.app-head {
-  color: var(--head-color);
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-  visibility: hidden;
-}
+} */
 
 /* ----------------APP-IMG------------------ */
+.container-app-img {
+  position: relative;
+  overflow: hidden;
+}
+
 .img-list {
   display: flex;
   flex-wrap: wrap;
@@ -513,12 +520,14 @@ img {
 
 .img-link {
   display: block;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .img-link:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: translateY(0%);
 }
 
 .thumb-text {
