--- a/css/styles.css
+++ b/css/styles.css
@@ -464,10 +464,10 @@ img {
   visibility: hidden;
 }
 
-.button-item:is(:hover, :focus) {
+/* .button-item:is(:hover, :focus) {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-}
+} */
 .button-list {
   display: flex;
   gap: 24px;
@@ -504,32 +504,44 @@ img {
 } */
 
 /* ----------------APP-IMG------------------ */
-.container-app-img {
-  position: relative;
-  overflow: hidden;
-}
 
 .img-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  /* margin-bottom: 72px; */
   column-gap: 24px;
   row-gap: 48px;
 }
 
 .img-link {
   display: block;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .img-link:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   transform: translateY(0%);
 }
-
+.img-link:focus {
+  transform: translateY(0%);
+}
+.thumb {
+  position: relative;
+  overflow: hidden;
+}
+.app-text {
+  position: absolute;
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .thumb-text {
   border-bottom: 1px solid #e7e9fc;
   border-left: 1px solid #e7e9fc;
