--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,7 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .menu-item ::after {
+.menu-item::after {
   content: "";
   position: absolute;
   left: 0;
@@ -116,7 +116,7 @@ body {
   height: 4px;
   background-color: #404bbf;
   border-radius: 2px;
-} */
+}
 
 .menu-link:hover {
   color: #404bbf;
