--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,7 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.menu-item::after {
+.menu-link::after {
   content: "";
   position: absolute;
   left: 0;
