--- a/css/styles.css
+++ b/css/styles.css
@@ -464,10 +464,11 @@ img {
   visibility: hidden;
 }
 
-/* .button-item:is(:hover, :focus) {
+.button-item:is(:hover, :focus) {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-} */
+}
+
 .button-list {
   display: flex;
   gap: 24px;
