--- a/css/styles.css
+++ b/css/styles.css
@@ -433,13 +433,13 @@ img {
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.customers-icon-link:hover {
+.customers-icon:hover {
   border-color: #404bbf;
   color: #404bbf;
   fill: #404bbf;
 }
 
-.customers-icon-link:focus {
+.customers-icon:focus {
   border-color: #404bbf;
   color: #404bbf;
   fill: #404bbf;
