--- a/css/styles.css
+++ b/css/styles.css
@@ -433,13 +433,13 @@ img {
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.customers-icon:hover {
+.customers-icon-link:hover {
   border-color: #404bbf;
   color: #404bbf;
   fill: #404bbf;
 }
 
-.customers-icon:focus {
+.customers-icon-link:focus {
   border-color: #404bbf;
   color: #404bbf;
   fill: #404bbf;
@@ -655,4 +655,9 @@ img {
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
