--- a/css/styles.css
+++ b/css/styles.css
@@ -701,3 +701,10 @@ img {
   background-color: #404bbf;
   border: none;
 }
+
+.modal-close-btn-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-close-btn-icon:is (:hover, :focus) {
+  fill: #ffffff;
+}
