--- a/css/styles.css
+++ b/css/styles.css
@@ -705,6 +705,6 @@ img {
 .modal-close-btn-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-close-btn-icon:is (:hover, :focus) {
+.modal-close-btn:is (:hover, :focus) .modal-close-btn-icon {
   fill: #ffffff;
 }
