--- a/css/styles.css
+++ b/css/styles.css
@@ -630,10 +630,8 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-icon-link:hover {
-  background-color: #31d0aa;
-}
-.footer-icon-link:focus {
+.footer-icon-item:hover .footer-icon-link,
+.footer-icon-item:focus .footer-icon-link {
   background-color: #31d0aa;
 }
 
@@ -705,6 +703,7 @@ img {
 .modal-close-btn-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-close-btn:is (:hover, :focus) .modal-close-btn-icon {
+.modal-close-btn:hover .modal-close-btn-icon,
+.modal-close-btn:focus .modal-close-btn-icon {
   fill: #ffffff;
 }
