--- a/css/styles.css
+++ b/css/styles.css
@@ -630,8 +630,8 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-icon-item:hover .footer-icon-link,
-.footer-icon-item:focus .footer-icon-link {
+.footer-icon-link:hover,
+.footer-icon-link:focus {
   background-color: #31d0aa;
 }
 
