--- a/css/styles.css
+++ b/css/styles.css
@@ -40,11 +40,11 @@ body {
   margin: 0 auto;
 }
 
-.current :hover {
+.current:hover {
   transition-property: none;
 }
 
-.current :focus {
+.current:focus {
   transition-property: none;
 }
 
@@ -144,7 +144,8 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.address-link:is(:hover, :focus) {
+.address-link:hover,
+.address-link:focus {
   color: #404bbf;
 }
 
@@ -377,10 +378,7 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-icon-link:hover {
-  background-color: #404bbf;
-}
-
+.team-icon-link:hover,
 .team-icon-link:focus {
   background-color: #404bbf;
 }
@@ -433,12 +431,7 @@ img {
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.customers-icon-link:hover {
-  border-color: #404bbf;
-  color: #404bbf;
-  fill: #404bbf;
-}
-
+.customers-icon-link:hover,
 .customers-icon-link:focus {
   border-color: #404bbf;
   color: #404bbf;
@@ -464,11 +457,6 @@ img {
   visibility: hidden;
 }
 
-.button-item:is(:hover, :focus) {
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
 .button-list {
   display: flex;
   gap: 24px;
@@ -492,17 +480,12 @@ img {
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-btn :hover {
+.portfolio-btn:hover,
+.portfolio-btn:focus {
   border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
-
-.portfolio-btn :focus {
-  border: 1px solid transparent;
-}
-
-/* .buttom-item:focus {
-
-} */
 
 /* ----------------APP-IMG------------------ */
 
@@ -519,12 +502,11 @@ img {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.img-link:hover {
+.img-link:hover .app-text,
+.img-link:focus .app-text {
   transform: translateY(0%);
 }
-.img-link:focus {
-  transform: translateY(0%);
-}
+
 .thumb {
   position: relative;
   overflow: hidden;
