--- a/css/styles.css
+++ b/css/styles.css
@@ -480,7 +480,11 @@ img {
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-btn:hover,
+.portfolio-btn:hover {
+  border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
 .portfolio-btn:focus {
   border: 1px solid transparent;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
@@ -504,6 +508,10 @@ img {
 
 .img-link:hover .app-text,
 .img-link:focus .app-text {
+  transform: translateY(0%);
+}
+
+.img-link:hover .img-link:focus {
   transform: translateY(0%);
 }
 
