--- a/css/styles.css
+++ b/css/styles.css
@@ -431,12 +431,17 @@ img {
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.customers-icon-link:hover,
+.customers-icon-link:hover {
+  border-color: #404bbf;
+  color: #404bbf;
+  fill: #404bbf;
+}
 .customers-icon-link:focus {
   border-color: #404bbf;
   color: #404bbf;
   fill: #404bbf;
 }
+
 .customers-icon {
   max-width: 104px;
   fill: currentColor;
@@ -506,12 +511,8 @@ img {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.img-link:hover .app-text,
-.img-link:focus .app-text {
-  transform: translateY(0%);
-}
-
-.img-link:hover .img-link:focus {
+.img-link:hover,
+.img-link:focus {
   transform: translateY(0%);
 }
 
