--- a/css/styles.css
+++ b/css/styles.css
@@ -86,15 +86,6 @@ body {
   gap: 40px;
 }
 
-.menu-item {
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  height: 4px;
-  background-color: #404bbf;
-  border-radius: 2px;
-}
-
 .menu-link {
   color: var(--head-color);
   font-size: 16px;
@@ -103,19 +94,22 @@ body {
   letter-spacing: 0.02em;
   padding: 24px 0;
   display: block;
-  position: relative;
   color: #404bbf;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.menu-link.current {
+  position: relative;
+}
 
-.menu-link::after {
+.menu-link.current::after {
   content: "";
-  position: absolute;
   left: 0;
   bottom: -1px;
   height: 4px;
   background-color: #404bbf;
   border-radius: 2px;
+  position: absolute;
+  width: 100%;
 }
 
 .menu-link:hover {
@@ -431,12 +425,12 @@ img {
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.customers-icon:hover {
+.customers-icon-link:hover {
   border-color: #404bbf;
   color: #404bbf;
   fill: #404bbf;
 }
-.customers-icon:focus {
+.customers-icon-link:focus {
   border-color: #404bbf;
   color: #404bbf;
   fill: #404bbf;
