--- a/css/styles.css
+++ b/css/styles.css
@@ -507,9 +507,13 @@ img {
 
 .img-link:hover,
 .img-link:focus {
-  transform: translateY(0%);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.img-link:hover .img-overlay,
+.img-link:focus .img-overlay {
+  transform: translateY(0%);
 }
 
 .thumb {
